# led_control

./: .gitignore  .gitmodules  Makefile  README.org  connect_gamepad.sh  linux_arturia_beatstep_udp.c  linux_fetch.c  make_shit_esp_project.sh  run_gamepad.sh  start_server.sh  sync.sh  test.sh  test_remote.sh  usb_reset.c
rust_ctl/: -  .gitignore  Cargo.toml  config.yaml  led_ctl.yaml  todo.txt
rust_ctl/assets/: main.css  script.js
rust_ctl/configs/: config.yaml  led_ctl.yaml  led_ctl_web.yaml  local_gui.yaml  test.yaml
rust_ctl/ctl/: Cargo.toml
rust_ctl/ctl/src/: action.rs  action_spec.rs  actions.rs  config.rs  main.rs  web.rs
rust_ctl/ctl/templates/: chan.html  flash_msg.html  tag.html
rust_ctl/gui/: Cargo.toml
rust_ctl/gui/src/: main.rs
rust_ctl/leds/: Cargo.toml  TODO.txt  config.yaml  led_ctl.yaml  led_ctl_web.yaml  test.yaml
rust_ctl/leds/src/: action.rs  action_spec.rs  actions.rs  chan_description.rs  chan_spec.rs  config.rs  configuration.rs  controller.rs  coord.rs  cuboid.rs  demo.rs  dev.rs  dev_stats.rs  frame.rs  init_devs.rs  lib.rs  main.rs  (+20 more)
rust_ctl/proto/: Cargo.toml
rust_ctl/src/: action.rs  chan.rs  chan_description.rs  chan_spec.rs  cli.rs  config.rs  controller.rs  coord.rs  cuboid.rs  demo.rs  dev.rs  dev_stats.rs  filters.rs  frame.rs  init_devs.rs  main.rs  msg_handler.rs  old_proto.rs  proto.rs  runner.rs  srv.rs  tag.rs  task.rs  template.rs  term_bar.rs  test_dev.rs  udp_srv.rs  udpv1_dev.rs  udpv2_dev.rs  usb.rs  wacom.rs  web.rs  web_tiny.rs
rust_ctl/templates/: chan.html  home.html
rust_ctl/term_bar/: Cargo.toml
(+125 files in other folders)
