[package]
name = "rust_ctl"
version = "0.1.0"
authors = ["unmanbearpig <unmanbearpig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.6"
rand = "0.8"

# Serialization
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

# Web stuff
iron = "0.6.1"
mime = "0.2"