[package]
name = "ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leds = { path = "../leds" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

tiny_http = "0.8.0"
url = "2.2.1"
form_urlencoded = "1.0.1"

rust-embed = "5.8.0"
askama = "0.10"
